[gd_scene load_steps=2 format=3 uid="uid://bwgqdg7wmxrca"]

[ext_resource type="Script" uid="uid://1ecarba4kuol" path="res://Scripts/pillar_spawner.gd" id="1_0x4ps"]

[node name="PillarSpawner" type="Node2D"]
script = ExtResource("1_0x4ps")

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="SpawnTimer" to="." method="spawn_pipe"]
